@@ -13,6 +13,13 @@
        * Note that reiserfs quotas are disabled on SLES 10 in this kernel.
 
 Severity   : normal
+Bugzilla   : 13497
+Description: LASSERT_{REQ,REP}SWAB macros are buggy
+Details    : If SWAB_PARANOIA is disabled, the LASSERT_REQSWAB and
+             LASSERT_REPSWAB macros become no-ops, which is incorrect. Drop
+              these macros and replace them with their difinitions instead.
+
+Severity   : normal
 Bugzilla   : 13521
 Description: Update kernel patches for SLES10 2.6.16.53-0.8.
 Details    : Update which_patch & target file for SLES10 latest kernel.
